fixed horizontal scrolling on services page

--- a/styles.css
+++ b/styles.css
@@ -249,8 +249,8 @@ button:hover {
 
 .loader-container {
   position: absolute;
-  width: 100%;
-  height: 100svh;
+  width: calc(100% - 64px); /* 100% minus padding */
+  height: calc(100% - 66px - 142px - 48px); /* 100% - nav bar - search bar - footer */
   display: flex;
   justify-content: center;
   align-content: center;
@@ -267,8 +267,8 @@ button:hover {
 }
 
 .resultsContainer {
-  display: grid;
-  /* display: none; */
+  /* display: grid; */
+  display: none;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 40px;
   row-gap: 32px;
